fix:Refactor code structure for improved readability and maintainability

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -59,11 +59,11 @@ div.imagens > p{
 }
 
 div#joaninha{
-    background-image: url(./imagens/joaninha.jpg);
+    background-image: url(../imagens/joaninha.jpg);
 }
 
 div#carta{
-    background-image: url(./imagens/papeis.jpg);
+    background-image: url(../imagens/papeis.jpg);
 }
 
 footer{
